v xml fading edges, zmena task_list_item v groups a students task na task_list_x_item aj v adapteroch, signup do scrollview, v taskovych aktivitach znova nacitanie taskov po ulozeni zmien vo fragmente,

--- a/app/src/main/res/layout/activity_group_tasks.xml
+++ b/app/src/main/res/layout/activity_group_tasks.xml
@@ -30,7 +30,7 @@
             android:layout_marginTop="70dp"
             android:background="@color/Background"
             android:paddingHorizontal="5dp"
-            tools:listitem="@layout/task_list_item" />
+            tools:listitem="@layout/task_x_list_item" />
 
         <ImageButton
             android:id="@+id/addButton"
