--- a/app/src/main/res/layout/activity_student_groups.xml
+++ b/app/src/main/res/layout/activity_student_groups.xml
@@ -65,8 +65,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="70dp"
-            android:requiresFadingEdge="vertical"
-            android:fadingEdgeLength="80dp">
+            android:fadingEdgeLength="80dp"
+            android:requiresFadingEdge="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
