--- a/app/src/main/res/layout/activity_student_rating.xml
+++ b/app/src/main/res/layout/activity_student_rating.xml
@@ -21,7 +21,9 @@
         android:layout_height="match_parent"
         android:layout_marginTop="70dp"
         android:layout_marginBottom="70dp"
-        android:background="@color/Background">
+        android:background="@color/Background"
+        android:fadingEdgeLength="80dp"
+        android:requiresFadingEdge="vertical">
 
         <RelativeLayout
             android:layout_width="match_parent"
