--- a/app/src/main/res/layout/activity_task_type1_creating.xml
+++ b/app/src/main/res/layout/activity_task_type1_creating.xml
@@ -44,6 +44,7 @@
                 android:id="@+id/prevBoard"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_marginVertical="70dp"
                 android:layout_centerVertical="true"
                 android:backgroundTint="@color/transparent"
                 android:contentDescription="@string/prevBoardCodeDescription"
@@ -54,6 +55,7 @@
                 android:id="@+id/nextBoard"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_marginVertical="70dp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:backgroundTint="@color/transparent"
