--- a/app/src/main/res/layout/activity_classroom_students.xml
+++ b/app/src/main/res/layout/activity_classroom_students.xml
@@ -71,6 +71,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="70dp"
+            android:layout_marginBottom="89dp"
             android:fadingEdgeLength="80dp"
             android:requiresFadingEdge="vertical">
 
@@ -174,6 +175,10 @@
                         android:hint="@string/classroomCodeDescription"
                         android:inputType="none" />
                 </com.google.android.material.textfield.TextInputLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="25dp"/>
             </LinearLayout>
         </ScrollView>
 
