--- a/app/src/main/res/layout/activity_group_students.xml
+++ b/app/src/main/res/layout/activity_group_students.xml
@@ -65,6 +65,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="70dp"
+            android:layout_marginBottom="89dp"
             android:fadingEdgeLength="80dp"
             android:requiresFadingEdge="vertical">
 
@@ -94,6 +95,10 @@
                     style="@style/chipGroup"
                     app:singleLine="false"
                     app:singleSelection="true" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="25dp"/>
             </LinearLayout>
         </ScrollView>
 
