--- a/app/src/main/res/layout/activity_task_assigned_groups.xml
+++ b/app/src/main/res/layout/activity_task_assigned_groups.xml
@@ -18,15 +18,15 @@
             android:contentDescription="@string/backCodeDescription" />
 
         <TextView
-            android:id="@+id/classroomName"
+            android:id="@+id/taskName"
             style="@style/headline"
-            android:text="@string/classroomName" />
+            android:text="@string/taskName" />
 
         <GridView
             android:id="@+id/groupsLayout"
             style="@style/scrollGridView"
             android:numColumns="3"
-            tools:listitem="@layout/grid_list_item" />
+            tools:listitem="@layout/grid_x_list_item" />
 
         <ImageButton
             android:id="@+id/addButton"
@@ -34,12 +34,6 @@
             android:contentDescription="@string/addCodeDescription" />
 
         <LinearLayout style="@style/bottomNavigationLayout">
-
-            <ImageButton
-                android:id="@+id/tasksButton"
-                style="@style/navButton"
-                android:contentDescription="@string/tasksCodeDescription"
-                android:src="@drawable/tasks_button_wrapper" />
 
             <ImageButton
                 android:id="@+id/studentsButton"
@@ -56,14 +50,14 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/groupPanel"
+        android:id="@+id/groupsPanel"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/Surface"
         android:visibility="gone">
 
         <ImageButton
-            android:id="@+id/closeGroupPanel"
+            android:id="@+id/closeGroupsPanel"
             style="@style/backButtonOnBackground"
             android:contentDescription="@string/closeCodeDescription" />
 
@@ -80,49 +74,10 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <RelativeLayout
-                    android:id="@+id/imageLayout"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_gravity="center"
-                    android:layout_marginBottom="20dp">
-
-                    <ImageView
-                        android:id="@+id/GroupImage"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:layout_gravity="center"
-                        android:contentDescription="@string/groupsCodeDescription"
-                        android:src="@drawable/baseline_account_circle_on_background_24" />
-
-                    <ImageButton
-                        android:id="@+id/editGroupImage"
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignParentBottom="true"
-                        android:background="@drawable/oval_50_primary"
-                        android:contentDescription="@string/editImageCodeDescription"
-                        android:src="@drawable/baseline_edit_on_primary_24" />
-
-                </RelativeLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/groupNameTextInputLayout"
-                    style="@style/inputField"
-                    android:layout_marginHorizontal="25dp">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/groupName"
-                        style="@style/inputFieldEditTextColor"
-                        android:hint="@string/groupName"
-                        android:inputType="text" />
-                </com.google.android.material.textfield.TextInputLayout>
-
                 <TextView
-                    android:id="@+id/textInGroup"
+                    android:id="@+id/textInTask"
                     style="@style/chipTextView"
-                    android:text="@string/inGroup" />
+                    android:text="Majú zapísanú úlohu" />
 
                 <com.google.android.material.chip.ChipGroup
                     android:id="@+id/chipGroupIn"
@@ -131,9 +86,9 @@
                     app:singleSelection="true" />
 
                 <TextView
-                    android:id="@+id/textNotInGroup"
+                    android:id="@+id/textNotInTask"
                     style="@style/chipTextView"
-                    android:text="@string/notInGroup" />
+                    android:text="Nemajú zapísanú úlohu" />
 
                 <com.google.android.material.chip.ChipGroup
                     android:id="@+id/chipGroupNotIn"
@@ -143,7 +98,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="25dp" />
+                    android:layout_height="25dp"/>
             </LinearLayout>
         </ScrollView>
 
@@ -151,43 +106,9 @@
             android:id="@+id/saveButton"
             style="@style/actionButton"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="25dp"
-            android:layout_marginEnd="25dp"
-            android:layout_marginBottom="25dp"
-            android:text="@string/create" />
+            android:layout_margin="25dp"
+            android:text="@string/save" />
     </RelativeLayout>
-
-    <LinearLayout
-        android:id="@+id/editPanel"
-        style="@style/backgroundLayout"
-        android:visibility="gone">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="260dp"
-            android:background="@drawable/bottom_layout_background_on_primary"
-            android:orientation="vertical">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="60dp">
-
-                <ImageButton
-                    android:id="@+id/closeEditPanel"
-                    style="@style/closeButtonOnBackground"
-                    android:contentDescription="@string/closeCodeDescription" />
-            </RelativeLayout>
-
-            <Button
-                android:id="@+id/editButton"
-                style="@style/actionButtonEdit" />
-
-            <Button
-                android:id="@+id/deleteButton"
-                style="@style/actionButtonDelete" />
-        </LinearLayout>
-    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/deletePanel"
@@ -221,28 +142,7 @@
                     android:id="@+id/confirmDelete"
                     style="@style/smallActionDeleteButton"
                     android:text="@string/delete" />
-
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-
-    <RelativeLayout
-        android:id="@+id/fragmentLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/Background"
-        android:visibility="gone">
-
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/fragmentContainer"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="70dp" />
-
-        <ImageButton
-            android:id="@+id/closeFragmentButton"
-            style="@style/backButtonOnBackground"
-            android:contentDescription="@string/backCodeDescription" />
-
-    </RelativeLayout>
 </RelativeLayout>
