--- a/app/src/main/res/layout/activity_task_type2_creating.xml
+++ b/app/src/main/res/layout/activity_task_type2_creating.xml
@@ -3,4 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageButton
+        android:id="@+id/backButton"
+        style="@style/backButtonOnBackground"
+        android:contentDescription="@string/backCodeDescription" />
+
 </RelativeLayout>
